--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,19 @@
   flex-grow: 1;
 }
 
+.bannerInicio{
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card{
+  width: var(--max)
+}
+
+.card-img-top-nueva{
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
