--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
   min-height: 100vh;
 }
 
+body {
+  background-image: url('./assets/fondo-pagina.avif');
+  background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  color: #fff; /* Color del texto; ajusta según tu diseño */
+}
+
+.bg-crud{
+  background-color: #fae3e6;
+}
+
 .sectionMain{
   flex-grow: 1;
 }
